--- a/.travis.yml
+++ b/.travis.yml
@@ -34,11 +34,10 @@ deploy:
   email: dev@meetapp.io
   api_key:
     secure: ${GH_TOKEN}
-  file_glob: true
   file:
     - build/386/$MYAPP-386
     - build/amd64/$MYAPP-amd64
   skip_cleanup: true
   on:
     repo: OrlovEvgeny/$trueMYAPP
-    tags:
+    tags: true
