--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,6 @@ before_deploy:
   - mkdir -p build/{386,amd64}
   - GOOS=linux GOARCH=386 go build --ldflags "-X main.VERSION=${TRAVIS_TAG}" -o build/386/${MYAPP}-386 *.go
   - GOOS=linux GOARCH=amd64 go build --ldflags "-X main.VERSION=${TRAVIS_TAG}" -o build/amd64/${MYAPP}-amd64 *.go
-  - ls build/amd64
 
 deploy:
   provider: releases
@@ -39,4 +38,5 @@ deploy:
     - build/amd64/${MYAPP}-amd64
   skip_cleanup: true
   on:
-    all_branches: true
+    repo: OrlovEvgeny/$MYAPP
+    tags: true
