--- a/.travis.yml
+++ b/.travis.yml
@@ -25,8 +25,8 @@ script: echo "pass"
 # build the app,build the package
 before_deploy:
   - mkdir -p build/{386,amd64}
-  - GOOS=linux GOARCH=386 go build --ldflags "-X main.VERSION=${TRAVIS_TAG}" -o build/386/${MYAPP}-386 *.go
-  - GOOS=linux GOARCH=amd64 go build --ldflags "-X main.VERSION=${TRAVIS_TAG}" -o build/amd64/${MYAPP}-amd64 *.go
+  - GOOS=linux GOARCH=386 go build --ldflags "-X main.version=${TRAVIS_TAG} -X main.build=${TRAVIS_BUILD_NUMBER} -X main.commit=${TRAVIS_COMMIT} -X main.docs=https://github.com/OrlovEvgeny/TinyJPG/blob/master/README.md" -o build/386/${MYAPP}-386 *.go
+  - GOOS=linux GOARCH=amd64 go build --ldflags "-X main.version=${TRAVIS_TAG} -X main.build=${TRAVIS_BUILD_NUMBER} -X main.commit=${TRAVIS_COMMIT} -X main.docs=https://github.com/OrlovEvgeny/TinyJPG/blob/master/README.md" -o build/amd64/${MYAPP}-amd64 *.go
 
 deploy:
   provider: releases
