--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ before_install:
   - mkdir -p ${GOPATH}/bin
 
 install:
-  - go get github.com/OrlovEvgeny/$MYAPP
+  - go get -u github.com/OrlovEvgeny/$MYAPP
   - cd $GOPATH/src/github.com/OrlovEvgeny/$MYAPP
   - go install
 
